[gd_scene load_steps=16 format=2]

[ext_resource path="res://Resources/tiles_packed.png" type="Texture" id=1]
[ext_resource path="res://World/CollectBox.gd" type="Script" id=2]
[ext_resource path="res://World/collectable.gd" type="Script" id=3]
[ext_resource path="res://Items/Collected.png" type="Texture" id=4]
[ext_resource path="res://Items/collecting.ogg" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 198, 126, 18, 18 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 216, 126, 18, 18 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), null ],
"loop": false,
"name": "collected",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 7 )

[node name="Collectable" type="Node2D"]
light_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
frame = 1
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="CollectBox" type="Area2D" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectBox"]
shape = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="CollectBox" to="." method="_on_CollectBox_body_entered"]
[connection signal="body_entered" from="CollectBox" to="CollectBox" method="_on_CollectBox_body_entered"]
